--- a/Project.csproj
+++ b/Project.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BracketsEnhancedEd.cs" />
+    <Compile Include="MagicStones.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\PrjAssemblyInfo.cs" />
     <Compile Include="TheTwoEggs.cs" />
