--- a/Project.csproj
+++ b/Project.csproj
@@ -44,9 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BracketsEnhancedEd.cs" />
+    <Compile Include="CardsCasttle.cs" />
+    <Compile Include="FoldingPaper.cs" />
+    <Compile Include="IlsSontFousCesRomains.cs" />
     <Compile Include="MagicStones.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\PrjAssemblyInfo.cs" />
+    <Compile Include="SimplifySelectionRange.cs" />
     <Compile Include="TheTwoEggs.cs" />
   </ItemGroup>
   <ItemGroup>
