These romans are crazy

--- a/Project.csproj
+++ b/Project.csproj
@@ -46,11 +46,11 @@
     <Compile Include="BracketsEnhancedEd.cs" />
     <Compile Include="CardsCasttle.cs" />
     <Compile Include="FoldingPaper.cs" />
-    <Compile Include="IlsSontFousCesRomains.cs" />
     <Compile Include="MagicStones.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\PrjAssemblyInfo.cs" />
     <Compile Include="SimplifySelectionRange.cs" />
+    <Compile Include="These-romans-are-crazy.cs" />
     <Compile Include="TheTwoEggs.cs" />
   </ItemGroup>
   <ItemGroup>
